# lektor-fixedlang

./: .gitignore  CHANGES.rst  LICENSE.txt  README.rst  lektor_fixedlang.py  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: test_fixedlang.py
tests/project/: project.lektorproject
tests/project/content/: contents.lr
tests/project/templates/: page.html
