[project]
name = "lektor-fixedlang"
version = "0.3"
description = "Set fixed languages for patterns in Lektor."
readme = "README.rst"

authors = [{name = "H. Turgut Uyar", email = "uyar@tekir.org"}]
license = {file = "LICENSE.txt"}

keywords = ["lektor", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Lektor",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]

requires-python = "~=3.8"
dependencies = ["lektor", "beautifulsoup4"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
style = ["ruff"]
dev = [
    "lektor-fixedlang[tests,style]",
    "build",
    "twine",
    "tox",
]

[project.entry-points."lektor.plugins"]
fixedlang = "lektor_fixedlang:FixedLangPlugin"

[project.urls]
repository = "https://github.com/uyar/lektor-fixedlang"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["lektor_fixedlang.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["A", "E", "F", "I", "T", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{8,9,10,11,12}, style
isolated_build = True

[testenv]
extras = tests
package = wheel
wheel_build_env = .pkg
commands =
    pytest

[testenv:style]
skip_install = true
deps =
    ruff
commands =
    ruff check --preview lektor_fixedlang.py tests

[testenv:package]
skip_install = true
deps =
    build
    twine
commands =
    python -c "import shutil; shutil.rmtree('dist', ignore_errors=True)"
    python -m build
    twine check dist/*
"""

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
